--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -102,11 +102,14 @@
         android:id="@+id/profileAge"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/profile_loading"
-        tools:layout_editor_absoluteX="184dp"
-        tools:layout_editor_absoluteY="234dp" />
+        app:layout_constraintEnd_toEndOf="@+id/profileGenre"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/profileGenre"
+        app:layout_constraintTop_toBottomOf="@+id/profileGenre" />
 
     <EditText
         android:id="@+id/profileHeight"
